--- a/DemoProject/.classpath
+++ b/DemoProject/.classpath
@@ -16,5 +16,6 @@
 			<attribute name="maven.pomderived" value="true"/>
 		</attributes>
 	</classpathentry>
+	<classpathentry kind="lib" path="E:/Akshay_Git/RestAPIAutomation/testng-7.11.0.jar"/>
 	<classpathentry kind="output" path="target/classes"/>
 </classpath>
