--- a/DemoProject/.classpath
+++ b/DemoProject/.classpath
@@ -1,10 +1,5 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <classpath>
-	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER/org.eclipse.jdt.internal.debug.ui.launcher.StandardVMType/JavaSE-21">
-		<attributes>
-			<attribute name="maven.pomderived" value="true"/>
-		</attributes>
-	</classpathentry>
 	<classpathentry including="**/*.java" kind="src" output="target/classes" path="src">
 		<attributes>
 			<attribute name="optional" value="true"/>
@@ -16,7 +11,8 @@
 			<attribute name="maven.pomderived" value="true"/>
 		</attributes>
 	</classpathentry>
-	<classpathentry kind="lib" path="E:/Akshay_Git/RestAPIAutomation/jcommander-2.0.jar"/>
-	<classpathentry kind="lib" path="E:/Akshay_Git/RestAPIAutomation/testng-6.14.3.jar"/>
+	<classpathentry kind="lib" path="D:/Abinaya_Git/RestAPIAutomation/jcommander-2.0.jar"/>
+	<classpathentry kind="lib" path="D:/Abinaya_Git/RestAPIAutomation/testng-6.14.3.jar"/>
+	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER"/>
 	<classpathentry kind="output" path="target/classes"/>
 </classpath>
