--- a/DemoProject/.classpath
+++ b/DemoProject/.classpath
@@ -11,8 +11,12 @@
 			<attribute name="maven.pomderived" value="true"/>
 		</attributes>
 	</classpathentry>
-	<classpathentry kind="lib" path="D:/Abinaya_Git/RestAPIAutomation/jcommander-2.0.jar"/>
-	<classpathentry kind="lib" path="D:/Abinaya_Git/RestAPIAutomation/testng-6.14.3.jar"/>
-	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER"/>
+	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER/org.eclipse.jdt.internal.debug.ui.launcher.StandardVMType/JavaSE-21">
+		<attributes>
+			<attribute name="maven.pomderived" value="true"/>
+		</attributes>
+	</classpathentry>
+	<classpathentry kind="lib" path="E:/Akshay_Git/RestAPIAutomation/jcommander-2.0.jar"/>
+	<classpathentry kind="lib" path="E:/Akshay_Git/RestAPIAutomation/testng-6.14.3.jar"/>
 	<classpathentry kind="output" path="target/classes"/>
 </classpath>
